tests/NormalTests/paczka1/fuzzy1/47279347.err
Error in line 7: A353 S842 77,6
Error in line 1: Fz9wX S842 6,4
Error in line 14: nRxnJIub A409 56,2
Error in line 20: DaB A409 15,57
Error in line 17: Fz9wX A353 56,7
Error in line 22: DaB S842 25,8
Error in line 19: nRxnJIub S277 71,8
Error in line 30: Fz9wX S842 33,2
Error in line 33: nRxnJIub S842 30,0
